<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProgram" >
    
    
    <TextView 
        android:id="@+id/info_text_1"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:text="@string/info_text_1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView 
        android:id="@+id/info_text_3"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:text="@string/info_text_3"/>
    <TextView 
        android:id="@+id/info_text_2"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_toLeftOf="@id/info_text_3"
        android:text="@string/info_text_2"/>

    <EditText
        android:id="@+id/exercise_1_name"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/info_text_1"
        android:hint="@string/exercise_name" />
    <EditText
        android:id="@+id/exercise_1_reps"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/info_text_3"
        android:layout_toLeftOf="@+id/info_text_3"
        android:ems="10"
        android:hint="@string/exercise_times" 
        android:inputType="number"/>
    <EditText
        android:id="@+id/exercise_1_times"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/info_text_3"
        android:layout_below="@+id/info_text_3"
        android:ems="10"
        android:hint="@string/exercise_times"
        android:inputType="number" />

	
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_button" 
        android:onClick="saveProgram"/>





</RelativeLayout>
