<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <EditText 
        android:id="@+id/program_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/program_name" />
    
    <Button 
        android:id="@+id/new_program_button"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:text="@string/new_program_button"
        android:layout_below="@id/program_name"
        android:onClick="newProgram"/>
    
    <Button
        android:id="@+id/load_program_button"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/program_name"
        android:text="@string/load_program_button"
        android:onClick="fillProgram"/>

</RelativeLayout>
